--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
 
 	</head>
 	<body>
-		<div class="container-calc">
+		<div class="content">
 			<div>
 				<h1>SIMPLE CALCULATOR</h1>
 			</div>
 			<div class="container">
-				<div class="calculator">
-					<form>
+					<form class="calculator">
 						<div class="screen">
 							<input type="text" id="display" disabled>
 						</div>
@@ -59,14 +58,21 @@
 							<button class="row-buttons-equals" id="calculate">&equals;</button>
 						</div>
 					</form>
-				</div>
+				
 				<div class="history">
-					<h3>History</h3>
 					<div class="history-list" id="history-list">
+						<h3>History</h3>
 					</div>
 				</div>
 			</div>
 		</div>
+		<footer>
+			<span>Arvin Paolo Diaz</span>
+			<span>|</span>
+			<span class="temp">Full-Stack Web Developer</span>
+			<span class="temp">|</span>
+			<span>&copy; All Rights Reserved</span>
+		</footer>
 		<script type="text/javascript" src="./index.js"></script>
 	</body>
 </html>
