Added Scroll when history is clicked

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 	</head>
 	<body>
 		<div class="content">
-			<div>
+			<div id="calcu">
 				<h1>SIMPLE CALCULATOR</h1>
 			</div>
 			<div class="container">
-					<form class="calculator">
+					<form class="calculator" >
 						<div class="screen">
 							<input type="text" id="display" disabled>
 						</div>
